--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>FriendsLIVE</title>
 </head>
 <body style="background-color:#6085f1">
-
+Welcome to FriendsLIVE!
+<br>
+Here Have a Background Music...
+<br>
+Enjoy it!
     <audio autoplay loop src="assets/audio_1.mp3" type="audio/mpeg"></audio>
     <video autoplay loop src="assets/video_1.mp4" type="video/mp4" width="100%"></video>
    
