--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FriendsLIVE</title>
 </head>
-<body style="background-color:#6085f1">
+<body style="background-color:#6085C1">
 <h2 align="center"><u>Welcome to FriendsLIVE!<u></h2>
 <br><br>
 <i>Here Have a Background Music...<i>
