--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
 <h2 align="center"><u>Welcome to FriendsLIVE!<u></h2>
 <br><br>
 <i>Here Have a Background Music...<i>
-<br><br><b>
-Enjoy it!</b>
+<br>  
+    <audio control autoplay loop src="assets/audio_1.mp3" type="audio/mpeg"></audio>
+<br>
+<b>
+    Enjoy it!
+</b>
 <br>
 <br>
-    <audio autoplay loop src="assets/audio_1.mp3" type="audio/mpeg"></audio>
+  
     <video autoplay loop src="assets/video_1.mp4" type="video/mp4" width="100%"></video>
    
 </body>
 </html>
+
