--- a/index.html
+++ b/index.html
@@ -6,20 +6,30 @@
     <title>FriendsLIVE</title>
 </head>
 <body style="background-color:#6085C1">
-<h2 align="center"><u>Welcome to FriendsLIVE!<u></h2>
-<br><br>
-<i>Here Have a Background Music...<i>
+<h2 align="center">
+    <i>
+        <u>
+            Welcome to FriendsLIVE!
+        </u>
+    </i>
+</h2>
+<br>
+<br>
+    <em>Here Have a Background Music...</em>
 <br>  
-    <audio control autoplay loop src="assets/audio_1.mp3" type="audio/mpeg"></audio>
+<br>
+    <audio controls autoplay>
+        <source src="assets/audio_1.mp3" type="audio/mpeg">
+    </audio>
+<br>
 <br>
 <b>
     Enjoy it!
 </b>
 <br>
 <br>
-  
-    <video autoplay loop src="assets/video_1.mp4" type="video/mp4" width="100%"></video>
-   
+    <video autoplay loop> 
+        <source src="assets/video_1.mp4" type="video/mp4" width="100%">
+    </video>
 </body>
 </html>
-
