--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
     <title>FriendsLIVE</title>
 </head>
 <body style="background-color:#6085C1">
-<h2 align="center">
+<h1 align="center">
     <i>
         <u>
             Welcome to FriendsLIVE!
         </u>
     </i>
-</h2>
+</h1>
 <br>
-<br>
-    <em>Here Have a Background Music...</em>
+    <span>
+        <em>Here Have a Background Music...</em>
+    </span>
 <br>  
 <br>
-    <audio controls autoplay>
+    <audio controls autoplay="true">
         <source src="assets/audio_1.mp3" type="audio/mpeg">
     </audio>
 <br>
@@ -28,7 +29,7 @@
 </b>
 <br>
 <br>
-    <video autoplay loop> 
+    <video autoplay="true" loop> 
         <source src="assets/video_1.mp4" type="video/mp4" width="100%">
     </video>
 </body>
