--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FriendsLIVE</title>
 </head>
-<body style="background-color:#6085C1">
-<h1 align="center">
-    <i>
-        <u>
-            Welcome to FriendsLIVE!
-        </u>
-    </i>
-</h1>
+<body style="background-color:#6085C1;">
+    <div style="background-color:rgb(149, 218, 161); background-image: url(assets/logo_1.png); background-repeat: no-repeat;">
+        <h1 align="center">
+            <i>
+                <u>
+                    Welcome to FriendsLIVE!
+                </u>
+            </i>
+        </h1>
+    
+<br>
 <br>
     <span>
-        <em>Here Have a Background Music...</em>
+        <em>Track: Ekhon Ami Onek Valo, Tomay Chara Thakte Pari...</em>
     </span>
 <br>  
 <br>
@@ -28,9 +31,15 @@
     Enjoy it!
 </b>
 <br>
+    <button type="button" title="No Music">Previous Music</button> 
+    <button type="button" title="Coming Soon">Next Music</button> 
 <br>
-    <video autoplay="true" loop> 
-        <source src="assets/video_1.mp4" type="video/mp4" width="100%">
+<br>
+</div>
+   <!-- 
+   <video autoplay="true" loop> 
+        <source src="assets/video_1.mp4" type="video/mp4" width="device-width">
     </video>
+-->
 </body>
 </html>
