--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body style="background-color:#6085C1;">
     <div style="background-color:rgb(149, 218, 161); background-image: url(assets/logo_1.png); background-repeat: no-repeat;">
+<blockquote>
         <h1 align="center">
             <i>
                 <u>
@@ -35,6 +36,7 @@
     <button type="button" title="Coming Soon">Next Music</button> 
 <br>
 <br>
+</blockquote>
 </div>
    <!-- 
    <video autoplay="true" loop> 
